Additional explanation for question 4.

--- a/titanic-exploration/titanic_survival_exploration.html
+++ b/titanic-exploration/titanic_survival_exploration.html
@@ -13272,7 +13272,7 @@ Make sure to keep track of the various features and conditions you tried before 
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer</strong>: <em>81.14%</em></p>
+<p><strong>Answer</strong>: <em>81.14%</em> Having already known that gender and age were a good predictors I wanted to see if I could further refine those 2 features. I noticed that passengers in class 3 typically didn't survive regardless of gender so I added a condition to ensure people weren't in class 3. I also noticed from the visualization that passengers who had number of siblings/spouse &gt;= 4 typically didn't survive as well, therefore I add a condition to ensure SibSp was less than 4. Adding these 2 conditions allowed me to reach an accuracy of 81.14%.</p>
 
 </div>
 </div>
